[project]
name = "mnemnk-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Akira Ishino", email = "akira@lumilab.jp" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain[ollama,openai]>=0.3.23",
]

[project.scripts]
mnemnk-langchain-chat-model = "mnemnk_langchain.chat_model:main"
mnemnk-langchain-to-human-message = "mnemnk_langchain.to_human_message:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
